# langchain-chat-specialist

./: Dockerfile  add_document.py  app.py  config.yaml  create_index.py  document_chat.py  pyproject.toml  utils.py
faiss_db/db-intermedia/: books.pkl
static/css/: style.css
templates/: index.html
